--- a/var/templates/radionew/status.html
+++ b/var/templates/radionew/status.html
@@ -13,6 +13,9 @@
 
 <p>
 <h3>Hörerverlauf</h3>
-<img src="{{ WEBROOT }}graph.php" alt="listenergraph" />
+<img src="{{ WEBROOT }}graphh.png" alt="listenergraph" />
+<img src="{{ WEBROOT }}graphd.png" alt="listenergraph" />
+<img src="{{ WEBROOT }}graphw.png" alt="listenergraph" />
+
 </p>
 {% endblock %}
