Added custom background

--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -17,11 +17,17 @@
         <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />
         {% if disco %}
             <div class="disco">
+
+            {% if disco_background %}
+            <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
+            {% endif %}
+            <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
+
                 {% if disco_streamer %}
 		<div class="hp"><img src="{{ WEBROOT }}images/headphones.png" /></div>
 	            <div class="dj"><img src="{{ WEBROOT }}images/cb/{{ disco_streamer }}.png" /></div>
 	            {% endif %}
-	            <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
+<div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
 	            {% for listener in disco %}
 	            <div class="listener" style="left:{{ listener.x }}px;bottom:{{ listener.y }}px;"><img src="{{ WEBROOT }}images/cb/{{ listener.country }}.png" /></div>
 	            {% endfor %}
