--- a/var/templates/radionew/showsettings.html
+++ b/var/templates/radionew/showsettings.html
@@ -16,6 +16,9 @@
 <tr>
     <td>aus ICY-Tags übernehmen</td><td><input type="checkbox" name="icy" {% if icytags %}checked{% endif %}/></td>
 </tr>
+<tr>
+    <td>Backgroundname (Abload.de)</td><td><input name="background" value="{{ background }}"></td>
+</tr>
 </table>
 <input type="submit" name="submit" value="Einstellungen ändern" />
 </form>
