--- a/var/templates/radionew/sidebar-user.html
+++ b/var/templates/radionew/sidebar-user.html
@@ -6,10 +6,10 @@ block.super
 <div id='subcontent'>
 {% if user_self %}
 	<div class='infoblock'>
-	<h3>Einstellungen</h3>
+	<h3>{% lang L_SETTINGS %}</h3>
 		<ul>
-			<li><a href="settings.php">Benutzereinstellungen</a></li>
-			<li><a href="showsettings.php">Sendungseinstellungen</a></li>
+			<li><a href="settings.php">{% lang L_USERSETTINGS %}</a></li>
+			<li><a href="showsettings.php">{% lang L_SHOWSETTINGS %}</a></li>
 			<!--<li>Statistiken</li>-->
 		</ul>
 	</div>
