--- a/var/templates/radionew/sidebar-user.html
+++ b/var/templates/radionew/sidebar-user.html
@@ -13,6 +13,11 @@ block.super
 			<!--<li>Statistiken</li>-->
 		</ul>
 	</div>
+	<div class='infoblock'>
+        <ul>
+            <li><a href="apiregistration.php">{% lang L_APIREGISTRATION %}</a></li>
+        </ul>
+    </div>
 {% endif %}
 </div>
 {% endblock %}
