--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,15 @@
 
 /**************** Body and tag styles ****************/
 
-*{margin:0; padding:0;}
+@font-face {
+    font-family: 'BPdotsUnicaseSquareBold';
+    src: url('BPdotsUnicaseSquareBold-webfont.eot');
+    src: local('☺'), url('BPdotsUnicaseSquareBold-webfont.woff') format('woff'), url('BPdotsUnicaseSquareBold-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{margin:0; padding:0}
 
 body{
 font:76% Verdana,Tahoma,Arial,sans-serif;
@@ -11,7 +19,6 @@ text-align:center;
 color:#303030;
 background:#656565;
 }
-
 a{
 color:#303030;
 font-weight:bold;
@@ -382,4 +389,21 @@ vertical-align: middle;
 
 .disco .listener {
     position:absolute;
+}
+
+.disco .text {
+	position:absolute;
+    bottom:147px;
+    left:10px;
+    width:126px;
+    height: 10px;
+    color:green;
+    background-color:black;
+    font: 10px 'BPdotsUnicaseSquareBold', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+div.showboxdiv {
+	border thin solid grey;
 }
