Fix typo in sidebar.html

--- a/var/templates/radionew/sidebar.html
+++ b/var/templates/radionew/sidebar.html
@@ -9,7 +9,7 @@ block.super
 	<h3>{% lang L_LAST10TRACKS %}</h3>
 		<ul>
 		{% for index, song in sb_songlist %}
-			<li {% if song.nowplaying %}class="nowplaying"{% endif %}>{% if song.nowplaying %}np:&nbsp;{% endif %}<span title="{{ song.fullsong }}">{{ song.song }}{% if song.short == 1 %}<a href="/histroy.php?id={{ song.id }}">...</a>{% endif %}</span></li>
+			<li {% if song.nowplaying %}class="nowplaying"{% endif %}>{% if song.nowplaying %}np:&nbsp;{% endif %}<span title="{{ song.fullsong }}">{{ song.song }}{% if song.short == 1 %}<a href="/history.php?id={{ song.id }}">...</a>{% endif %}</span></li>
 		{% endfor %}
 		</ul></div>
 <div class='infoblock'>
