Weniger Unterschicht in nowplaying.html

--- a/var/templates/radionew/nowplaying.html
+++ b/var/templates/radionew/nowplaying.html
@@ -1,7 +1,7 @@
 <div id="jquery_jplayer"></div>
 <div id="player_container" class="ui-overlay ui-corner-all">
     <div id="noonestream">
-        Niemand Strömt grade
+        Niemand strömt gerade
     </div>
     <div id="trackinfo" style="display:none;">
         <table>
