moved dialogdiv to base.html and made it hidden by default

--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -133,7 +133,10 @@ Haben wir nicht, bekommen wir auch nichtmehr rein!
       <div id="footer">        
         
       </div>    
-    </div>  
+    </div>
+    <div id="dialog" style="display:none;">
+hurrdurr derp
+</div>
   </body>
 
 </html>
