changed some things in language,
if no translations is found the key will printed instead

--- a/var/templates/radionew/history.html
+++ b/var/templates/radionew/history.html
@@ -2,5 +2,20 @@
 
 {% block content %}
 <h2>Verlauf</h2>
+<!-- 
+<select id="begin">
+{% for date in dates %}
+<option value="{{date}}">{{date}}</option>
+{% endfor %}
+</select>
+<select id="end">
+{% for date in dates %}
+<option value="{{date}}">{{date}}</option>
+{% endfor %}
+</select>
+<script type="text/javascript">
+$( "#begin, #end" ).selectToUISlider({labels:4}).hide();
 
+</script>
+ -->
 {% endblock %}
