--- a/var/templates/radionew/nowplaying.html
+++ b/var/templates/radionew/nowplaying.html
@@ -1,14 +1,14 @@
 <div id="jquery_jplayer"></div>
 <div id="player_container" class="ui-overlay ui-corner-all">
     <div id="noonestream">
-        Niemand strömt gerade
+        {% lang L_NP_NOONESTREAMING %}
     </div>
     <div id="trackinfo" style="display:none;">
         <table>
-        <tr><td>Interpret</td><td id="artist"></td></tr>
-        <tr><td>Titel</td><td id="title"></td></tr>
-        <tr><td>DJ</td><td id="dj"></td></tr>
-        <tr><td>Sendung</td><td id="show"></td></tr>
+        <tr><td>{% lang L_ARTIST %}</td><td id="artist"></td></tr>
+        <tr><td>{% lang L_TITLE %}</td><td id="title"></td></tr>
+        <tr><td>{% lang L_DJ %}</td><td id="dj"></td></tr>
+        <tr><td>{% lang L_SHOW %}</td><td id="show"></td></tr>
         </table>
     </div>
     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -39,9 +39,17 @@ $(function(){
                 $('#trackinfo #title').html(data.title);
                 $('#trackinfo #dj').html(data.username);
                 $('#trackinfo #show').html(data.name);
-                $('#ticker').html(data.artist+' - '+data.title);
+                if($('#ticker').html() != data.artist+' - '+data.title){
+                    $('#ticker').html(data.artist+' - '+data.title);
+                }
             }else{
-            	$('#trackname').html('');
+            	if(!isShow){
+                    $("#trackinfo").fadeOut(function(){
+                        $("#noonestream").fadeIn();
+                    });
+                    isShow=false;
+                    $('#ticker').html('pause');
+                }
             }
         	updateTimer = window.setTimeout(updateShow,10000);
         });
