--- a/var/templates/radionew/history.html
+++ b/var/templates/radionew/history.html
@@ -1,7 +1,7 @@
 {% extends "sidebar.html" %}
 
 {% block content %}
-<h2>Verlauf</h2>
+<h2>{% lang L_HISTORY %}</h2>
 <!-- 
 <select id="begin">
 {% for date in dates %}
