Fixed various translations,
cleaned up user.php (still messy but should be readable now)

und wie immer -> übersetzungen anpassen :3

--- a/var/templates/radionew/nowplaying.html
+++ b/var/templates/radionew/nowplaying.html
@@ -55,7 +55,7 @@ $(function(){
         });
         
     }
-    var updateTimer = window.setTimeout(updateShow,500);
+    updateShow();
 
     $("#jquery_jplayer").jPlayer({
         ready: function ()
