--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -18,23 +18,21 @@
     <div id="container">      
       <div id="header">
         <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />
-        {% if disco %}
-            <div class="disco">
-            {% if disco_background %}
-                <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
-            {% endif %}
-                <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
-            {% if disco_streamer %}
-                <div class="hp"><img src="{{ WEBROOT }}images/headphones.png" /></div>
-                <div class="dj"><img src="{{ WEBROOT }}images/cb/{{ disco_streamer }}.png" /></div>
-            {% endif %}
-                <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
-            {% for listener in disco %}
-                <div class="listener" style="left:{{ listener.x }}px;bottom:{{ listener.y }}px;"><img src="{{ WEBROOT }}images/cb/{{ listener.country }}.png" /></div>
-            {% endfor %}
-            <div class="text"><marquee scrollamount="2" id="ticker">testo</marquee></div>
-            </div>
+        <div class="disco">
+        {% if disco_background %}
+            <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
         {% endif %}
+            <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
+        {% if disco_streamer %}
+            <div class="hp"><img src="{{ WEBROOT }}images/headphones.png" /></div>
+            <div class="dj"><img src="{{ WEBROOT }}images/cb/{{ disco_streamer }}.png" /></div>
+        {% endif %}
+            <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
+        {% for listener in disco %}
+            <div class="listener" style="left:{{ listener.x }}px;bottom:{{ listener.y }}px;"><img src="{{ WEBROOT }}images/cb/{{ listener.country }}.png" /></div>
+        {% endfor %}
+        <div class="text"><marquee scrollamount="2" id="ticker">testo</marquee></div>
+        </div>
       </div>      
       <div id="navigation">        
         <ul>
@@ -136,9 +134,7 @@ Haben wir nicht, bekommen wir auch nichtmehr rein!
         
       </div>    
     </div>
-    <div id="dialog" style="display:none;">
-hurrdurr derp
-</div>
+    <div id="dialog" style="display:none;"></div>
   </body>
 
 </html>
