some lang-related template changes
also updated ru,de,en

--- a/var/templates/radionew/broadcasts-sb.html
+++ b/var/templates/radionew/broadcasts-sb.html
@@ -15,7 +15,7 @@ block.super
 {% if user_logged_in %}
 <div class='infoblock'>
 <h3>{% lang L_ACTIONS %}</h3>
-	<a href="javascript:addShow();" id="addshowlink">Sendung hinzuf&uuml;gen</a>
+	<a href="javascript:addShow();" id="addshowlink">{% lang L_ADDSHOW %}</a>
 	<div id="addshow" style="display:none;width:100%;">
 		<form>
 		<table>
