--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="{{ WEBROOT }}js/jquery-1.4.2.min.js" ></script>
 	<script type="text/javascript" src="{{ WEBROOT }}js/jquery-ui-1.8.5.custom.min.js" ></script>
 	<script type="text/javascript" src="{{ WEBROOT }}js/jquery.jplayer.min.js" ></script>
-	<script type="text/javascript" src="{{ WEBROOT }}js/selectToUISlider.jQuery.js" ></script>
+	<script type="text/javascript" src="{{ WEBROOT }}js/jquery.dataTables.min.js" ></script>
 	<script type="text/javascript" src="{{ WEBROOT }}js/jtip.js" ></script>
 	<script type="text/javascript" src="{{ WEBROOT }}js/rfk.js" ></script>
   </head>  
